src/objects/Evaluacion__c.object
<CustomObject>
    <fields>
        <fullName>BarraPorcentaje__c</fullName>
        <formula>IF( PorcentajeTotal__c&gt;= 0 &amp;&amp; PorcentajeTotal__c&lt; 0.25, 
   IMAGE(&quot;/resource/1484850172000/BarraCero&quot;,&apos;CERO&apos;,25,25), 
   IF( PorcentajeTotal__c&gt;= 0.25 &amp;&amp; PorcentajeTotal__c&lt; 0.50, 
      IMAGE(&quot;/resource/1484858764000/BarraUno&quot;,&apos;UNO&apos;,25,25), 
      IF( PorcentajeTotal__c&gt;= 0.50 &amp;&amp; PorcentajeTotal__c&lt; 0.75, 
          IMAGE(&quot;/resource/1484858836000/BarraDos&quot;,&apos;DOS&apos;,25,25), 
          IF( PorcentajeTotal__c&gt;= 0.75 &amp;&amp; PorcentajeTotal__c &lt; 1, 
              IMAGE(&quot;/resource/1484858856000/BarraTres&quot;,&apos;TRES&apos;,25,25), 
              IF( PorcentajeTotal__c= 1, 
                  IMAGE(&quot;/resource/1484858876000/BarraCuatro&quot;,&apos;CUATRO&apos;,25,25), 
                  &quot;No esta definido&quot; 
              ) 
          ) 
      ) 
   ) 
)</formula>
        <label>Barra de porcentaje</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encuestado__c</fullName>
        <label>Asesor wibe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDGrabacion__c</fullName>
        <label>ID Grabación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_Cotizacion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cotización</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Evaluaciones</relationshipLabel>
        <relationshipName>Evaluaciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WB_ErroresFatales__c</fullName>
        <label>Errores fatales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WB_ErroresNoFatales__c</fullName>
        <label>Errores no fatales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WB_PuntajeBase__c</fullName>
        <label>Puntaje Base</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WB_PuntajeTotal__c</fullName>
        <label>Puntaje Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MotivoNoContacto__c</fullName>
        <label>Motivo De No Contacto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGENDA</fullName>
                </value>
                <value>
                    <fullName>BUZON/CONTESTADORA/FAX</fullName>
                </value>
                <value>
                    <fullName>CLIENTE CUELGA NO ESCUCHA SCRIPT</fullName>
                </value>
                <value>
                    <fullName>CLIENTE SOLICITA LLAMAR DESPUES</fullName>
                </value>
                <value>
                    <fullName>CONTACTO MERCADOTECNIA</fullName>
                </value>
                <value>
                    <fullName>EMPRESA SIN EXTENSION</fullName>
                </value>
                <value>
                    <fullName>EQUIVOCADO INCORRECTO</fullName>
                </value>
                <value>
                    <fullName>FUERA DEL AREA DE SERVICIO/SUSPENDID</fullName>
                </value>
                <value>
                    <fullName>INFORMACIÓN SOBRE SU POLIZA</fullName>
                </value>
                <value>
                    <fullName>NO CONTESTA</fullName>
                </value>
                <value>
                    <fullName>NO SE ENCUENTRA</fullName>
                </value>
                <value>
                    <fullName>PRUEBA</fullName>
                </value>
                <value>
                    <fullName>TEL. INEXISTENTE</fullName>
                </value>
                <value>
                    <fullName>TEL. OCUPADO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MotivoNoventa__c</fullName>
        <label>Motivo De No Venta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUTOFINANCIAMIENTO</fullName>
                </value>
                <value>
                    <fullName>AUTO NO EN LA BASE</fullName>
                </value>
                <value>
                    <fullName>AUTO SINIESTRADO</fullName>
                </value>
                <value>
                    <fullName>AUTO USO COMERCIAL</fullName>
                </value>
                <value>
                    <fullName>FUERA DE POLITICA</fullName>
                </value>
                <value>
                    <fullName>LEGALIZADO/FONTERIZO</fullName>
                </value>
                <value>
                    <fullName>MALA EXPERIENCIA CON LOS SEGUROS</fullName>
                </value>
                <value>
                    <fullName>MODELO</fullName>
                </value>
                <value>
                    <fullName>NO TIENE AUTO</fullName>
                </value>
                <value>
                    <fullName>TRANSFERENCIA A ATENCIÓN A CLIENTES</fullName>
                </value>
                <value>
                    <fullName>TRANSFERENCIA A SINIESTROS</fullName>
                </value>
                <value>
                    <fullName>TRANSFERENCIA MOTOS</fullName>
                </value>
                <value>
                    <fullName>YA CUENTA CON SEGURO WIBE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MotivoOportunidadComercial__c</fullName>
        <label>Motivo de la Oportunidad Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Venta</fullName>
                </value>
                <value>
                    <fullName>Venta Pre emisión</fullName>
                </value>
                <value>
                    <fullName>No Venta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PorcentajeExperienciaConCliente__c</fullName>
        <label>Porcentaje Experiencia con el cliente</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PorcentajeProductoProceso__c</fullName>
        <label>Porcentaje Producto / Proceso.</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PorcentajeReglasJuego__c</fullName>
        <label>Porcentaje Reglas del Juego</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PorcentajeTotal__c</fullName>
        <label>Porcentaje total</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PorcentajeVentas__c</fullName>
        <label>Porcentaje Ventas.</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RepresentanteCalidad__c</fullName>
        <label>Representante Calidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Evaluación</label>
    <listViews>
        <fullName>Todos</fullName>
        <columns>NAME</columns>
        <columns>Encuestado__c</columns>
        <columns>RepresentanteCalidad__c</columns>
        <columns>IDGrabacion__c</columns>
        <columns>MotivoOportunidadComercial__c</columns>
        <columns>MotivoNoContacto__c</columns>
        <columns>MotivoNoventa__c</columns>
        <columns>PorcentajeExperienciaConCliente__c</columns>
        <columns>PorcentajeProductoProceso__c</columns>
        <columns>PorcentajeReglasJuego__c</columns>
        <columns>PorcentajeVentas__c</columns>
        <columns>PorcentajeTotal__c</columns>
        <columns>BarraPorcentaje__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>EVAL-{000000000}</displayFormat>
        <label>Número de Evaluación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluaciones</pluralLabel>
    <recordTypes>
        <fullName>Outbound</fullName>
        <active>true</active>
        <label>Outbound</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Motivo_de_contacto_y_venta_no_obligados</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

 ISPICKVAL(MotivoOportunidadComercial__c, &apos;No Venta&apos;),

OR(
 ISPICKVAL(MotivoNoventa__c, &apos;&apos;),
 ISPICKVAL(MotivoNoContacto__c, &apos;&apos;)
)
)</errorConditionFormula>
        <errorDisplayField>MotivoOportunidadComercial__c</errorDisplayField>
        <errorMessage>***DEBE ELEGIR UN VALOR EN MOTIVO DE NO CONTACTO Y NO VENTA SI ELIGIÓ MOTIVO DE LA OPORTUNIDAD COMERCIAL COMO NO VENTA.***</errorMessage>
    </validationRules>
</CustomObject>